--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <header class="cabecalho">
-        <span>CABEÇALHO</span>
+        <img src="./img/banner-1440x300-1.jpg" alt="banner">
     </header>
 
     <div class="container">
