--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 <body>
 
     <header class="cabecalho">
-        <img src="./img/banner-1440x300-1.jpg" alt="banner">
+    
     </header>
 
     <div class="container">
         <aside class="banner-1">
-            <span>BANNER-1</span>
+           <img src="./img/banner-lateral-1.png" alt="Banner">
         </aside>
         <section class="conteudo">
             <span>CONTEÚDO</span>
         </section>
         <aside class="banner-2">
-            <span>BANNER-2</span>
+            <img src="./img/banner-lateral-2.png" alt="Banner">
         </aside>
     </div>
 
