Troca de imagens com Functions. Propriedades.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
            <img src="./img/banner-lateral-1.png" alt="Banner">
         </aside>
         <section class="conteudo">
-            <span>CONTEÚDO</span>
+
+            <img src="./img/pic_bulboff.gif" alt="Lampada">
+            
+            <!-- <button class="botao" onclick="acender()">LIGAR</button> -->
+            <button>LIGAR</button>
+
         </section>
         <aside class="banner-2">
             <img src="./img/banner-lateral-2.png" alt="Banner">
